--- a/portfolio.html
+++ b/portfolio.html
@@ -27,73 +27,78 @@
 
 <body>
     <!--Header-->
-    <header>
+    <header class="headr">
         <div class="container">
-            <nav> <a href="" class="logo-web link">Web<span class="logo-studio link">Studio</span></a>
-                <ul>
+            <nav class="headr-nav"> <a href="./index.html" class="logo-web link">Web<span
+                        class="logo-studio link">Studio</span></a>
+                <ul class="headr-list">
                     <li><a href="./index.html" class="headr-link link">Студия</a></li>
                     <li><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
                     <li><a href="" class="headr-link link">Контакты</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
                 </ul>
             </nav>
-            <a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="headr-contact link">+380961111111</a>
         </div>
     </header>
     <!--Main-->
     <main>
-        
-            <section>
-                <ul>
+
+        <section class="section">
+            <div class="container">
+                <ul class="portfolio-btn-list">
                     <li><button type="button" class="main-portfolio-btn">Все</button></li>
                     <li><button type="button" class="main-portfolio-btn">Веб-сайты</button></li>
                     <li><button type="button" class="main-portfolio-btn">Приложения</button></li>
                     <li><button type="button" class="main-portfolio-btn">Дизайн</button></li>
                     <li><button type="button" class="main-portfolio-btn">Маркетинг</button></li>
                 </ul>
-                <ul>
-                    <li><img src="images/img1.jpg" width="370" height="294" alt="произвольная картинка 1" />
+            </div>
+            <div class="container">
+                <ul class="img">
+                    <li><img src="images/img1.jpg" width="370" height="294" alt="произвольная картинка 1"/>
                         <h3 class="main-portfolio-h3">Технокряк</h3>
                         <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                     </li>
-                    <li><img src="images/img2.jpg" width="370" height="294" alt="произвольная картинка 2" />
+                    <li><img src="images/img2.jpg" width="370" height="294" alt="произвольная картинка 2"/>
                         <h3 class="main-portfolio-h3">Постер New Orlean vs Golden Star</h3>
                         <p class="main-portfolio-h3-paragraph">Дизайн</p>
                     </li>
-                    <li><img src="images/img3.jpg" width="370" height="294" alt="произвольная картинка 3" />
+                    <li><img src="images/img3.jpg" width="370" height="294" alt="произвольная картинка 3"/>
                         <h3 class="main-portfolio-h3">Ресторан Seafood</h3>
                         <p class="main-portfolio-h3-paragraph">Приложения</p>
                     </li>
-                    <li><img src="images/img4.jpg" width="370" height="294" alt="произвольная картинка 4" />
-                        <h3 class="main-portfolio-h3">Проект Prime</h3>
+                    <li><img src="images/img4.jpg" width="370" height="294" alt="произвольная картинка 4"/>
+                        <h3 class="main-portfolio-h3">Проект Prime</h3> class="pictures-portfolio"
                         <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                     </li>
-                    <li><img src="images/img5.jpg" width="370" height="294" alt="произвольная картинка 5" />
+                    <li><img src="images/img5.jpg" width="370" height="294" alt="произвольная картинка 5"/>
                         <h3 class="main-portfolio-h3">Проект Boxes</h3>
                         <p class="main-portfolio-h3-paragraph">Приложения</p>
                     </li>
-                    <li><img src="images/img6.jpg" width="370" height="294" alt="произвольная картинка 6" />
+                    <li><img src="images/img6.jpg" width="370" height="294" alt="произвольная картинка 6"/>
                         <h3 class="main-portfolio-h3">Inspiration has no Borders</h3>
                         <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                     </li>
-                    <li><img src="images/img7.jpg" width="370" height="294" alt="произвольная картинка 7" />
+                    <li><img src="images/img7.jpg" width="370" height="294" alt="произвольная картинка 7"/>
                         <h3 class="main-portfolio-h3">Издание Limited Edition</h3>
                         <p class="main-portfolio-h3-paragraph">Дизайн</p>
                     </li>
-                    <li><img src="images/img8.jpg" width="370" height="294" alt="произвольная картинка 8" />
+                    <li><img src="images/img8.jpg" width="370" height="294" alt="произвольная картинка 8"/>
                         <h3 class="main-portfolio-h3">Проект LAB</h3>
                         <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                     </li>
-                    <li><img src="images/img9.jpg" width="370" height="294" alt="произвольная картинка 9" />
+                    <li><img src="images/img9.jpg" width="370" height="294" alt="произвольная картинка 9"/>
                         <h3 class="main-portfolio-h3">Growing Business</h3>
                         <p class="main-portfolio-h3-paragraph">Приложения</p>
                     </li>
                 </ul>
-            </section>
-       
+            </div>
+        </section>
+
     </main>
     <!--Footer-->
-    <footer>
+    <footer class="container footer">
         <a href="" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
