--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
 
 <body>
     <!--Header-->
-    <header class="headr">
+    <header class="section">
         <div class="container">
-            <nav class="headr-nav"> <a href="./index.html" class="logo-web link">Web<span
-                        class="logo-studio link">Studio</span></a>
-                <ul class="headr-list">
-                    <li><a href="./index.html" class="headr-link link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
-                    <li><a href="" class="headr-link link">Контакты</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
-                </ul>
-            </nav>
+            <div class="header">
+            <div  class="headr-nav"><nav> <a href="./index.html" class="logo-web link">Web<span
+                        class="logo-studio link">Studio</span></a></nav></div>
+            <ul class="headr-list">
+                <li><a href="./index.html" class="headr-link link">Студия</a></li>
+                <li><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
+                <li><a href="" class="headr-link link">Контакты</a></li>
+                <li><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
+            </ul>
+        </div>
         </div>
     </header>
 
