--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
     <header class="section">
         <div class="container">
             <div class="header">
-            <div  class="headr-nav"><nav> <a href="./index.html" class="logo-web link">Web<span
-                        class="logo-studio link">Studio</span></a></nav></div>
-            <ul class="headr-list">
-                <li><a href="./index.html" class="headr-link link">Студия</a></li>
-                <li><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
-                <li><a href="" class="headr-link link">Контакты</a></li>
-                <li><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
-            </ul>
-        </div>
+                <div class="headr-nav">
+                    <nav> <a href="./index.html" class="logo-web link">Web<span
+                                class="logo-studio link">Studio</span></a></nav>
+                </div>
+                <ul class="headr-list">
+                    <li><a href="./index.html" class="headr-link studio link">Студия</a></li>
+                    <li><a href="./portfolio.html" class="headr-link portfolio link">Портфолио</a></li>
+                    <li><a href="" class="headr-link contact link">Контакты</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="headr-contact email link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
+                </ul>
+            </div>
         </div>
     </header>
 
@@ -52,9 +54,10 @@
             </div>
         </section>
         <section class="section">
-            <div class="container">
-                <ul>
-                    <li>
+            <div class="container about">
+
+                <ul class="main-about">
+                    <li class="container point1">
                         <h3 class="main-h3">Внимание к деталям</h3>
                         <p class="main-paragraph">Идейные соображение, а также начало повседневной работы по
                             форматированию
@@ -62,34 +65,40 @@
                     </li>
 
 
-                    <li>
+                    <li class="container point1">
                         <h3 class="main-h3">Пунктуальность</h3>
                         <p class="main-paragraph">Задача организации, в особенности же рамки и место обучение кадров
                             влечет
                             за собой.</p>
                     </li>
 
-                    <li>
+                    <li class="container point1">
                         <h3 class="main-h3">Планирование</h3>
-                        <p class="main-paragraph">Равным образом консультация с широким активом в значительной степени
+                        <p class="main-paragraph">Равным образом консультация с широким активом в значительной
+                            степени
                             обуславливает.</p>
                     </li>
 
-                    <li>
+                    <li class="container point1">
                         <h3 class="main-h3">Современные технологии</h3>
-                        <p class="main-paragraph">Значимость этих проблем настолько очевидна, что реализация плановых
+                        <p class="main-paragraph">Значимость этих проблем настолько очевидна, что реализация
+                            плановых
                             заданий.</p>
                     </li>
                 </ul>
+
             </div>
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="main-h2">Чем мы занимаемся</h2>
+                <h2 class="main-h2 container">Чем мы занимаемся</h2>
                 <ul class="pictures-about">
-                    <li><img src="images/img_pc.jpg" width="370" height="294" alt="картинка ПК" /></li>
-                    <li><img src="images/img_lap.jpg" width="370" height="294" alt="картинка ноутбука" /></li>
-                    <li><img src="images/img_tablet.jpg" width="370" height="294" alt="картинка планшета" /></li>
+                    <li class="container img"><img src="images/img_pc.jpg" width="370" height="294" alt="картинка ПК" />
+                    </li>
+                    <li class="container img"><img src="images/img_lap.jpg" width="370" height="294"
+                            alt="картинка ноутбука" /></li>
+                    <li class="container img"><img src="images/img_tablet.jpg" width="370" height="294"
+                            alt="картинка планшета" /></li>
                 </ul>
             </div>
         </section>
@@ -124,11 +133,12 @@
     </main>
     <!--Footer-->
     <footer class="container footer">
+        <div class="footer-logo">
         <a href="" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
         <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
         <a href="tel:+380961111111" class="footer-contact link">+380961111111</a>
-    </footer>
+    </div></footer>
 </body>
 
 </html>
