--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,118 +27,109 @@
 
 <body>
     <!--Header-->
-    <header class="section">
-        <div class="container">
-            <div class="header">
-                <div class="headr-nav">
-                    <nav> <a href="./index.html" class="logo-web link">Web<span
-                                class="logo-studio link">Studio</span></a></nav>
-                </div>
-                <ul class="headr-list">
-                    <li><a href="./index.html" class="headr-link studio link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="headr-link portfolio link">Портфолио</a></li>
-                    <li><a href="" class="headr-link contact link">Контакты</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="headr-contact email link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
-                </ul>
-            </div>
-        </div>
+    <header class="container headr">
+
+        <nav class="headr">
+            <div class="headr-logo"><a href="./index.html" class="logo-web link">Web<span
+                        class="logo-studio link">Studio</span></a></div>
+            <ul class="headr-list">
+                <li class="headr-items"><a href="./index.html" class="headr-link link">Студия</a></li>
+                <li class="headr-items"><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
+                <li class="headr-items"><a href="" class="headr-link link">Контакты</a></li>
+            </ul>
+        </nav>
+
+        <div class="contact-mail"> </div><a href="mailto:info@devstudio.com"
+            class="headr-contact link">info@devstudio.com</a></div>
+        <div class="contact-tel"><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></div>
     </header>
-
     <!--Main-->
-    <main>
-        <section class="section">
-            <div class="container main-section">
-                <h1 class="main-h1">Эффективное решение для вашего бизнеса</h1>
-                <button type="button" class="main-button">Заказать услугу</button>
-            </div>
+    <main class="section">
+        <section class="container main">
+            <h1 class="main-h1">Эффективное решение для вашего бизнеса</h1>
+            <button type="button" class="main-button">Заказать услугу</button>
         </section>
-        <section class="section">
-            <div class="container about">
-
-                <ul class="main-about">
-                    <li class="container point1">
-                        <h3 class="main-h3">Внимание к деталям</h3>
-                        <p class="main-paragraph">Идейные соображение, а также начало повседневной работы по
-                            форматированию
-                            позиции.</p>
-                    </li>
+        <section class="container about">
+            <ul class="about-list">
+                <li class="about-items">
+                    <h3 class="main-h3">Внимание к деталям</h3>
+                    <p class="main-paragraph">Идейные соображение, а также начало повседневной работы по форматированию
+                        позиции.</p>
+                </li>
 
 
-                    <li class="container point1">
-                        <h3 class="main-h3">Пунктуальность</h3>
-                        <p class="main-paragraph">Задача организации, в особенности же рамки и место обучение кадров
-                            влечет
-                            за собой.</p>
-                    </li>
+                <li class="about-items">
+                    <h3 class="main-h3">Пунктуальность</h3>
+                    <p class="main-paragraph">Задача организации, в особенности же рамки и место обучение кадров влечет
+                        за собой.</p>
+                </li>
 
-                    <li class="container point1">
-                        <h3 class="main-h3">Планирование</h3>
-                        <p class="main-paragraph">Равным образом консультация с широким активом в значительной
-                            степени
-                            обуславливает.</p>
-                    </li>
+                <li class="about-items">
+                    <h3 class="main-h3">Планирование</h3>
+                    <p class="main-paragraph">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
+                </li>
 
-                    <li class="container point1">
-                        <h3 class="main-h3">Современные технологии</h3>
-                        <p class="main-paragraph">Значимость этих проблем настолько очевидна, что реализация
-                            плановых
-                            заданий.</p>
-                    </li>
-                </ul>
-
-            </div>
+                <li class="about-items">
+                    <h3 class="main-h3">Современные технологии</h3>
+                    <p class="main-paragraph">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.</p>
+                </li>
+            </ul>
         </section>
         <section class="section">
             <div class="container">
-                <h2 class="main-h2 container">Чем мы занимаемся</h2>
-                <ul class="pictures-about">
-                    <li class="container img"><img src="images/img_pc.jpg" width="370" height="294" alt="картинка ПК" />
-                    </li>
-                    <li class="container img"><img src="images/img_lap.jpg" width="370" height="294"
+                <h2 class="main-h2">Чем мы занимаемся</h2>
+                <ul class="pictures">
+                    <li class="pictures-items"><img src="images/img_pc.jpg" width="370" height="294"
+                            alt="картинка ПК" /></li>
+                    <li class="pictures-items"><img src="images/img_lap.jpg" width="370" height="294"
                             alt="картинка ноутбука" /></li>
-                    <li class="container img"><img src="images/img_tablet.jpg" width="370" height="294"
+                    <li class="pictures-items"><img src="images/img_tablet.jpg" width="370" height="294"
                             alt="картинка планшета" /></li>
                 </ul>
             </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="container team">
                 <h2 class="main-h2">Наша команда </h2>
                 <ul class="team-list">
-                    <li class="team-item"><img src="images/foto_dem.jpg" width="270" height="260"
+                    <li class="team-items"><img src="images/foto_dem.jpg" width="270" height="260"
                             alt="Фото Игоря Демьяненко" />
                         <p class="team-name">Игорь Демьяненко</p>
                         <p class="position">Product Designer</p>
                     </li>
-                    <li class="team-item"><img src="images/foto_rep.jpg" width="270" height="260"
+                    <li class="team-items"><img src="images/foto_rep.jpg" width="270" height="260"
                             alt="Фото Ольги Репиной" />
                         <p class="team-name">Ольга Репина </p>
                         <p class="position">Fronted Developer</p>
-                    </li class="team-item">
-                    <li class="team-item"><img src="images/forto_tarasov.jpg" width="270" height="260"
+                    </li>
+                    <li class="team-items"><img src="images/forto_tarasov.jpg" width="270" height="260"
                             alt="Фото Николая Тарасова" />
                         <p class="team-name">Николай Тарасов </p>
                         <p class="position">Marketing</p>
                     </li>
-                    <li class="team-item"><img src="images/foto_ermak.jpg" width="270" height="260"
+                    <li class="team-items"><img src="images/foto_ermak.jpg" width="270" height="260"
                             alt="Фото Михаила Ермакова" />
                         <p class="team-name">Михаил Ермаков </p>
                         <p class="position">Designer</p>
                     </li>
                 </ul>
-            </div>
         </section>
-
     </main>
     <!--Footer-->
-    <footer class="container footer">
-        <div class="footer-logo">
-        <a href="" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="footer-contact link">+380961111111</a>
-    </div></footer>
+    <footer class="section">
+        <div class="container footer">
+            <div class="footer-logo"><a href="./index.html" class="logo-web link">Web<span
+                        class="logo-studio-footer link">Studio</span></a></div>
+            <div class="footer-address">
+                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            </div>
+            <div class="footer-mail"><a href="mailto:info@devstudio.com"
+                    class="footer-contact link">info@devstudio.com</a></div>
+            <div class="footer-tel"><a href="tel:+380961111111" class="footer-contact link">+380961111111</a></div>
+        </div>
+    </footer>
 </body>
 
 </html>
