--- a/portfolio.html
+++ b/portfolio.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,85 +24,118 @@
 
 <body>
     <!--Header-->
-    <header class="section">
-        <div class="container">
-            <div class="header">
-                <div class="headr-nav">
-                    <nav> <a href="./index.html" class="logo-web link">Web<span
-                                class="logo-studio link">Studio</span></a></nav>
-                </div>
-                <ul class="headr-list">
-                    <li><a href="./index.html" class="headr-link studio link">Студия</a></li>
-                    <li><a href="./portfolio.html" class="headr-link portfolio link">Портфолио</a></li>
-                    <li><a href="" class="headr-link contact link">Контакты</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="headr-contact email link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></li>
-                </ul>
-            </div>
-        </div>
+    <header class="container headr">
+
+        <nav class="headr">
+            <div class="headr-logo"><a href="./index.html" class="logo-web link">Web<span
+                        class="logo-studio link">Studio</span></a></div>
+            <ul class="headr-list">
+                <li class="headr-items"><a href="./index.html" class="headr-link link">Студия</a></li>
+                <li class="headr-items"><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
+                <li class="headr-items"><a href="" class="headr-link link">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="contact-mail"> </div><a href="mailto:info@devstudio.com"
+            class="headr-contact link">info@devstudio.com</a></div>
+        <div class="contact-tel"><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></div>
     </header>
     <!--Main-->
     <main>
-
         <section class="section">
-            <div class="container">
+            <div class="container portfolio-btn">
                 <ul class="portfolio-btn-list">
-                    <li><button type="button" class="main-portfolio-btn">Все</button></li>
-                    <li><button type="button" class="main-portfolio-btn">Веб-сайты</button></li>
-                    <li><button type="button" class="main-portfolio-btn">Приложения</button></li>
-                    <li><button type="button" class="main-portfolio-btn">Дизайн</button></li>
-                    <li><button type="button" class="main-portfolio-btn">Маркетинг</button></li>
+                    <li class="portfolio-btn-items"><button type="button" class="main-portfolio-btn">Все</button></li>
+                    <li class="portfolio-btn-items"><button type="button" class="main-portfolio-btn">Веб-сайты</button>
+                    </li>
+                    <li class="portfolio-btn-items"><button type="button" class="main-portfolio-btn">Приложения</button>
+                    </li>
+                    <li class="portfolio-btn-items"><button type="button" class="main-portfolio-btn">Дизайн</button>
+                    </li>
+                    <li class="portfolio-btn-items"><button type="button" class="main-portfolio-btn">Маркетинг</button>
+                    </li>
                 </ul>
             </div>
-            <div class="container">
-                <ul class="img">
-                    <li><img src="images/img1.jpg" width="370" height="294" alt="произвольная картинка 1" />
-                        <h3 class="main-portfolio-h3">Технокряк</h3>
-                        <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
+            <div class="container pictures">
+                <ul class="portfolio-list">
+                    <li class="portfolio-items"><img src="images/img1.jpg" width="370" height="294"
+                            alt="произвольная картинка 1" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Технокряк</h3>
+                            <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
+                        </div>
                     </li>
-                    <li><img src="images/img2.jpg" width="370" height="294" alt="произвольная картинка 2" />
-                        <h3 class="main-portfolio-h3">Постер New Orlean vs Golden Star</h3>
-                        <p class="main-portfolio-h3-paragraph">Дизайн</p>
+                    <li class="portfolio-items"><img src="images/img2.jpg" width="370" height="294"
+                            alt="произвольная картинка 2" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Постер New Orlean vs Golden Star</h3>
+                            <p class="main-portfolio-h3-paragraph">Дизайн</p>
+                        </div>
                     </li>
-                    <li><img src="images/img3.jpg" width="370" height="294" alt="произвольная картинка 3" />
-                        <h3 class="main-portfolio-h3">Ресторан Seafood</h3>
-                        <p class="main-portfolio-h3-paragraph">Приложения</p>
+                    <li class="portfolio-items"><img src="images/img3.jpg" width="370" height="294"
+                            alt="произвольная картинка 3" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Ресторан Seafood</h3>
+                            <p class="main-portfolio-h3-paragraph">Приложения</p>
+                        </div>
                     </li>
-                    <li><img src="images/img4.jpg" width="370" height="294" alt="произвольная картинка 4" />
-                        <h3 class="main-portfolio-h3">Проект Prime</h3> class="pictures-portfolio"
-                        <p class="main-portfolio-h3-paragraph">Маркетинг</p>
+                    <li class="portfolio-items"><img src="images/img4.jpg" width="370" height="294"
+                            alt="произвольная картинка 4" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Проект Prime</h3>
+                            <p class="main-portfolio-h3-paragraph">Маркетинг</p>
+                        </div>
                     </li>
-                    <li><img src="images/img5.jpg" width="370" height="294" alt="произвольная картинка 5" />
-                        <h3 class="main-portfolio-h3">Проект Boxes</h3>
-                        <p class="main-portfolio-h3-paragraph">Приложения</p>
+                    <li class="portfolio-items"><img src="images/img5.jpg" width="370" height="294"
+                            alt="произвольная картинка 5" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Проект Boxes</h3>
+                            <p class="main-portfolio-h3-paragraph">Приложения</p>
+                        </div>
                     </li>
-                    <li><img src="images/img6.jpg" width="370" height="294" alt="произвольная картинка 6" />
-                        <h3 class="main-portfolio-h3">Inspiration has no Borders</h3>
-                        <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
+                    <li class="portfolio-items"><img src="images/img6.jpg" width="370" height="294"
+                            alt="произвольная картинка 6" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Inspiration has no Borders</h3>
+                            <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
+                        </div>
                     </li>
-                    <li><img src="images/img7.jpg" width="370" height="294" alt="произвольная картинка 7" />
-                        <h3 class="main-portfolio-h3">Издание Limited Edition</h3>
-                        <p class="main-portfolio-h3-paragraph">Дизайн</p>
+                    <li class="portfolio-items"><img src="images/img7.jpg" width="370" height="294"
+                            alt="произвольная картинка 7" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Издание Limited Edition</h3>
+                            <p class="main-portfolio-h3-paragraph">Дизайн</p>
+                        </div>
                     </li>
-                    <li><img src="images/img8.jpg" width="370" height="294" alt="произвольная картинка 8" />
-                        <h3 class="main-portfolio-h3">Проект LAB</h3>
-                        <p class="main-portfolio-h3-paragraph">Маркетинг</p>
+                    <li class="portfolio-items"><img src="images/img8.jpg" width="370" height="294"
+                            alt="произвольная картинка 8" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Проект LAB</h3>
+                            <p class="main-portfolio-h3-paragraph">Маркетинг</p>
+                        </div>
                     </li>
-                    <li><img src="images/img9.jpg" width="370" height="294" alt="произвольная картинка 9" />
-                        <h3 class="main-portfolio-h3">Growing Business</h3>
-                        <p class="main-portfolio-h3-paragraph">Приложения</p>
+                    <li class="portfolio-items"><img src="images/img9.jpg" width="370" height="294"
+                            alt="произвольная картинка 9" />
+                        <div class="pictures-text">
+                            <h3 class="main-portfolio-h3">Growing Business</h3>
+                            <p class="main-portfolio-h3-paragraph">Приложения</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
-
     </main>
     <!--Footer-->
-    <footer class="container footer">
-        <a href="" class="logo-web link">Web<span class="logo-studio-footer link">Studio</span></a>
-        <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@devstudio.com" class="footer-contact link">info@devstudio.com</a>
-        <a href="tel:+380961111111" class="footer-contact link">+380961111111</a>
+    <footer class="section">
+        <div class="container footer">
+            <div class="footer-logo"><a href="./index.html" class="logo-web link">Web<span
+                        class="logo-studio-footer link">Studio</span></a></div>
+            <div class="footer-address">
+                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+            </div>
+            <div class="footer-mail"><a href="mailto:info@devstudio.com"
+                    class="footer-contact link">info@devstudio.com</a></div>
+            <div class="footer-tel"><a href="tel:+380961111111" class="footer-contact link">+380961111111</a></div>
+        </div>
     </footer>
 </body>
 
