--- a/index.html
+++ b/index.html
@@ -44,38 +44,43 @@
         <div class="contact-tel"><a href="tel:+380961111111" class="headr-contact link">+380961111111</a></div>
     </header>
     <!--Main-->
-    <main class="section">
-        <section class="container main">
-            <h1 class="main-h1">Эффективное решение для вашего бизнеса</h1>
-            <button type="button" class="main-button">Заказать услугу</button>
+    <main>
+        <section class="section">
+            <div class="container main">
+                <h1 class="main-h1">Эффективное решение для вашего бизнеса</h1>
+                <button type="button" class="main-button">Заказать услугу</button>
+            </div>
         </section>
-        <section class="container about">
-            <ul class="about-list">
-                <li class="about-items">
-                    <h3 class="main-h3">Внимание к деталям</h3>
-                    <p class="main-paragraph">Идейные соображение, а также начало повседневной работы по форматированию
-                        позиции.</p>
-                </li>
+        <section class=section>
+            <div class="container about">
+                <ul class="about-list">
+                    <li class="about-items">
+                        <h3 class="main-h3">Внимание к деталям</h3>
+                        <p class="main-paragraph">Идейные соображение, а также начало повседневной работы по
+                            форматированию
+                            позиции.</p>
+                    </li>
+                    
+                    <li class="about-items">
+                        <h3 class="main-h3">Пунктуальность</h3>
+                        <p class="main-paragraph">Задача организации, в особенности же рамки и место обучение кадров
+                            влечет
+                            за собой.</p>
+                    </li>
 
+                    <li class="about-items">
+                        <h3 class="main-h3">Планирование</h3>
+                        <p class="main-paragraph">Равным образом консультация с широким активом в значительной степени
+                            обуславливает.</p>
+                    </li>
 
-                <li class="about-items">
-                    <h3 class="main-h3">Пунктуальность</h3>
-                    <p class="main-paragraph">Задача организации, в особенности же рамки и место обучение кадров влечет
-                        за собой.</p>
-                </li>
-
-                <li class="about-items">
-                    <h3 class="main-h3">Планирование</h3>
-                    <p class="main-paragraph">Равным образом консультация с широким активом в значительной степени
-                        обуславливает.</p>
-                </li>
-
-                <li class="about-items">
-                    <h3 class="main-h3">Современные технологии</h3>
-                    <p class="main-paragraph">Значимость этих проблем настолько очевидна, что реализация плановых
-                        заданий.</p>
-                </li>
-            </ul>
+                    <li class="about-items">
+                        <h3 class="main-h3">Современные технологии</h3>
+                        <p class="main-paragraph">Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section">
             <div class="container">
