--- a/portfolio.html
+++ b/portfolio.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <style>
-        li {
-            list-style-type: none;
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>WebStudio</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet">
+        <style>
+            li {
+                list-style-type: none;
+            }
+        </style>
+    </head>
 
 <body>
     <!--Header-->
@@ -57,63 +60,63 @@
             </div>
             <div class="container pictures">
                 <ul class="portfolio-list">
-                    <li class="portfolio-items"><img src="images/img1.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img1.jpg" width="360" height="284"
                             alt="произвольная картинка 1" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Технокряк</h3>
                             <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img2.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img2.jpg" width="360" height="284"
                             alt="произвольная картинка 2" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Постер New Orlean vs Golden Star</h3>
                             <p class="main-portfolio-h3-paragraph">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img3.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img3.jpg" width="360" height="284"
                             alt="произвольная картинка 3" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Ресторан Seafood</h3>
                             <p class="main-portfolio-h3-paragraph">Приложения</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img4.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img4.jpg" width="360" height="284"
                             alt="произвольная картинка 4" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект Prime</h3>
                             <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img5.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img5.jpg" width="360" height="284"
                             alt="произвольная картинка 5" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект Boxes</h3>
                             <p class="main-portfolio-h3-paragraph">Приложения</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img6.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img6.jpg" width="360" height="284"
                             alt="произвольная картинка 6" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Inspiration has no Borders</h3>
                             <p class="main-portfolio-h3-paragraph">Веб-сайт</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img7.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img7.jpg" width="360" height="284"
                             alt="произвольная картинка 7" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Издание Limited Edition</h3>
                             <p class="main-portfolio-h3-paragraph">Дизайн</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img8.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img8.jpg" width="360" height="284"
                             alt="произвольная картинка 8" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Проект LAB</h3>
                             <p class="main-portfolio-h3-paragraph">Маркетинг</p>
                         </div>
                     </li>
-                    <li class="portfolio-items"><img src="images/img9.jpg" width="370" height="294"
+                    <li class="portfolio-items"><img src="images/img9.jpg" width="360" height="284"
                             alt="произвольная картинка 9" />
                         <div class="pictures-text">
                             <h3 class="main-portfolio-h3">Growing Business</h3>
