--- a/index.html
+++ b/index.html
@@ -101,23 +101,23 @@
                 <ul class="team-list">
                     <li class="team-items"><img src="images/foto_dem.jpg" width="270" height="260"
                             alt="Фото Игоря Демьяненко" />
-                        <p class="team-name">Игорь Демьяненко</p>
-                        <p class="position">Product Designer</p>
+                        <div class="team-position"><p class="team-name">Игорь Демьяненко</p>
+                        <p class="position">Product Designer</p></div>
                     </li>
                     <li class="team-items"><img src="images/foto_rep.jpg" width="270" height="260"
                             alt="Фото Ольги Репиной" />
-                        <p class="team-name">Ольга Репина </p>
-                        <p class="position">Fronted Developer</p>
+                        <div class="team-position"><p class="team-name">Ольга Репина </p>
+                        <p class="position">Fronted Developer</p></div>
                     </li>
                     <li class="team-items"><img src="images/forto_tarasov.jpg" width="270" height="260"
                             alt="Фото Николая Тарасова" />
-                        <p class="team-name">Николай Тарасов </p>
-                        <p class="position">Marketing</p>
+                        <div class="team-position"><p class="team-name">Николай Тарасов </p>
+                        <p class="position">Marketing</p></div>
                     </li>
                     <li class="team-items"><img src="images/foto_ermak.jpg" width="270" height="260"
                             alt="Фото Михаила Ермакова" />
-                        <p class="team-name">Михаил Ермаков </p>
-                        <p class="position">Designer</p>
+                        <div class="team-position"><p class="team-name">Михаил Ермаков </p>
+                        <p class="position">Designer</p></div>
                     </li>
                 </ul>
         </section>
