--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container about">
+            <div class="container">
                 <ul class="about-list">
                     <li class="about-items">
                         <h3 class="main-h3">Внимание к деталям</h3>
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section img">
+        <section class="section">
             <div class="container">
                 <h2 class="main-h2">Чем мы занимаемся</h2>
                 <ul class="pictures">
@@ -95,7 +95,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section img">
+        <section class="section">
             <div class="container">
                 <h2 class="main-h2">Наша команда </h2>
                 <ul class="team-list">
