--- a/portfolio.html
+++ b/portfolio.html
@@ -27,20 +27,21 @@
 
 <body>
     <!--Header-->
-    <header class="container headr line">
+    <header class="section line">
+        <div class="container headr">
+            <nav class="headr">
+                <div class="headr-logo"><a href="./index.html" class="logo-web link">Web<span
+                            class="logo-studio link">Studio</span></a></div>
+                <ul class="headr-list">
+                    <li class="headr-items"><a href="./index.html" class="headr-link link">Студия</a></li>
+                    <li class="headr-items"><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
+                    <li class="headr-items"><a href="" class="headr-link link">Контакты</a></li>
+                </ul>
+            </nav>
 
-        <nav class="headr">
-            <div class="headr-logo"><a href="./index.html" class="logo-web link">Web<span
-                        class="logo-studio link">Studio</span></a></div>
-            <ul class="headr-list">
-                <li class="headr-items"><a href="./index.html" class="headr-link link">Студия</a></li>
-                <li class="headr-items"><a href="./portfolio.html" class="headr-link link">Портфолио</a></li>
-                <li class="headr-items"><a href="" class="headr-link link">Контакты</a></li>
-            </ul>
-        </nav>
-
-        <div class="contact"><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="headr-contact link">+380961111111</a>
+            <div class="contact"><a href="mailto:info@devstudio.com" class="headr-contact link">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="headr-contact link">+380961111111</a>
+            </div>
         </div>
     </header>
     <!--Main-->
@@ -59,7 +60,8 @@
                     </li>
                 </ul>
             </div>
-            <div class="container pictures">
+
+            <div class="container">
                 <ul class="portfolio-list">
                     <li class="portfolio-items"><img src="images/img1.jpg" width="370" height="284"
                             alt="произвольная картинка 1" />
